# keepassy

./: .gitignore  README.md
docs/: bug.md  project-roadmap.md  release-linux.md  todo.md
keepass-rs/: .gitignore  Cargo.toml  README.md
keepass-rs/crates/keepass_cli/: Cargo.toml
keepass-rs/crates/keepass_cli/src/: main.rs
keepass-rs/crates/keepass_core/: Cargo.toml
keepass-rs/crates/keepass_core/src/: dto.rs  error.rs  lib.rs  service.rs  storage.rs
keepass-rs/crates/keepass_core/tests/: open_kdbx.rs
keepass-rs/crates/keepass_ffi/: Cargo.toml  README.md
keepass-rs/crates/keepass_ffi/src/: lib.rs
keepass-rs/docs/: architecture.md  devlog.md  roadmap.md  todo.md
keepassy_flutter/: README.md  analysis_options.yaml  pubspec.yaml
keepassy_flutter/android/app/: build.gradle.kts
keepassy_flutter/android/app/src/main/: AndroidManifest.xml
keepassy_flutter/docs/: frontend.md  roadmap.md
keepassy_flutter/ios/Runner/: Info.plist
keepassy_flutter/ios/Runner.xcodeproj/: project.pbxproj
keepassy_flutter/lib/: main.dart
keepassy_flutter/lib/src/app/: keepassy_app.dart  theme.dart
keepassy_flutter/lib/src/features/settings/: settings_dialog.dart
keepassy_flutter/lib/src/features/unlock/: unlock_page.dart
keepassy_flutter/lib/src/features/vault/: vault_page.dart
keepassy_flutter/lib/src/models/: vault_models.dart
keepassy_flutter/lib/src/repositories/: ffi_vault_repository.dart  vault_repository.dart
keepassy_flutter/lib/src/settings/: settings.dart  settings_service.dart
keepassy_flutter/lib/src/widgets/: field_line.dart  pane_surface.dart  status_chip.dart
keepassy_flutter/linux/: CMakeLists.txt
keepassy_flutter/linux/runner/: my_application.cc
keepassy_flutter/macos/Runner.xcodeproj/: project.pbxproj
keepassy_flutter/macos/Runner/Configs/: AppInfo.xcconfig
keepassy_flutter/test/: widget_test.dart
keepassy_flutter/web/: index.html  manifest.json
keepassy_flutter/windows/: CMakeLists.txt
keepassy_flutter/windows/runner/: Runner.rc  main.cpp
packaging/linux/: com.keepassy.KeePassY.desktop  com.keepassy.KeePassY.metainfo.xml
scripts/: build_linux_release.sh
(+2 files in other folders)
