[package]
name = "keepass_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "keepass-rs"
path = "src/main.rs"

[dependencies]
clap.workspace = true
keepass_core = { path = "../keepass_core" }
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
