[package]
name = "keepass_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono = "0.4"
keepass = { workspace = true, features = ["save_kdbx4"] }
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid = "1"

[dev-dependencies]
serde_json.workspace = true
