[package]
name = "keepass_ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keepass_core = { path = "../keepass_core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
keepass.workspace = true
